packages/components/src/styles/components/dropdown.scss
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

//
// DROPDOWN COMPONENT
//
// notice: pseudo-classes for the states *must* follow the order link > visited > hover > focus > active
//

@use "../mixins/button" as *;
@use "../mixins/focus-ring" as *;

$hds-dropdown-toggle-border-radius: $hds-button-border-radius;

// DROPDOWN

.hds-dropdown--is-inline {
  display: inline-block;

  .hds-dropdown-toggle-icon,
  .hds-dropdown-toggle-button {
    display: inline-flex;
  }
}

// TOGGLE/ICON

.hds-dropdown-toggle-icon {
  position: relative;
  display: flex;
  gap: 2px;
  align-items: center;
  justify-content: center;
  padding: 1px;
  // this variant mimics the secondary button, but not entirely (eg. it doesn't have an elevation shadow)
  // so we need to provide the same color values but without using the `hds-button-color-secondary()` mixin
  color: var(--token-color-foreground-primary);
  background-color: var(--token-color-surface-faint);
  border: 1px solid var(--token-color-border-strong);
  border-radius: $hds-dropdown-toggle-border-radius;
  outline-style: solid; // used to avoid double outline+focus-ring in Safari (see https://github.com/hashicorp/design-system-components/issues/161#issuecomment-1031548656)
  outline-color: transparent; // We need this to be transparent for a11y

  &:hover,
  &.mock-hover {
    background-color: var(--token-color-surface-interactive);
    cursor: pointer;
  }

  &:focus,
  &.mock-focus {
    @include hds-button-state-focus();
    border-color: var(--token-color-focus-action-internal);

    &::before {
      border-color: var(--token-color-focus-action-external);
    }
  }

  &:active,
  &.mock-active {
    background-color: var(--token-color-surface-interactive-active);
    border-color: var(--token-color-border-strong);

    &::before {
      border-color: transparent;
    }
  }

  &:disabled,
  &.mock-disabled {
    @include hds-button-state-disabled();
  }
}

.hds-dropdown-toggle-icon__wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: calc(#{$hds-dropdown-toggle-border-radius} - 2px); // $hds-dropdown-toggle-border-radius - (1px padding + 1px border) (= 3px)

  img {
    width: 100%;
    height: 100%;
    object-fit: cover; // this will make sure it's correct even if the item isn't square
    border-radius: inherit;
  }
}

// Icon sizes

.hds-dropdown-toggle-icon--size-small {
  .hds-dropdown-toggle-icon__wrapper {
    width: 24px; // we use this element to provide the right size for the parent "button" so it matches the `button[small]`
    height: 24px;
  }

  &.hds-dropdown-toggle-icon--has-chevron {
    // For small variant with chevron, force the icon size to custom (even if the SGV size is `16px`)
    .hds-icon {
      width: 12px;
      height: 12px;
    }
  }
}

.hds-dropdown-toggle-icon--size-medium {
  .hds-dropdown-toggle-icon__wrapper {
    width: 32px; // we use this element to provide the right size for the parent "button" so it matches the `button[small]`
    height: 32px;
  }
}

// TOGGLE/BUTTON

.hds-dropdown-toggle-button {
  @include hds-button();

  &:focus,
  &.mock-focus {
    @include hds-button-state-focus();
  }

  &:disabled,
  &.mock-disabled,
  &:disabled:focus,
  &.mock-disabled:focus,
  &:disabled:hover,
  &.mock-disabled:hover {
    @include hds-button-state-disabled();

    .hds-dropdown-toggle-button__badge,
    .hds-dropdown-toggle-button__count {
      color: var(--token-color-foreground-primary);
      background-color: var(--token-color-surface-strong);
    }
  }
}

@include hds-button-size-classes("hds-dropdown-toggle-button");

.hds-dropdown-toggle-button--size-small {
  padding-right: 0.375rem;

  // For small variant with chevron, force the icon size to custom (even if the SGV size is `16px`)
  .hds-dropdown-toggle-chevron .hds-icon {
    width: 12px;
    height: 12px;
  }
}

.hds-dropdown-toggle-button--size-medium {
  padding-right: 0.5625rem;
}

.hds-dropdown-toggle-button--color-primary {
  @include hds-button-color-primary();
}

.hds-dropdown-toggle-button--color-secondary {
  @include hds-button-color-secondary();
}

.hds-dropdown-toggle-button--width-full {
  justify-content: space-between;
  width: 100%;
  max-width: 100%;
}

.hds-dropdown-toggle-button__text {
  text-align: left;
}

.hds-dropdown-toggle-button__icon {
  flex: none;
}

.hds-dropdown-toggle-button__badge,
.hds-dropdown-toggle-button__count {
  margin: -3px 0 -3px 0;
}

// TOGGLE / CHEVRON

.hds-dropdown-toggle-chevron {
  margin-left: auto;
  padding-left: 2px;

  .hds-icon-chevron-down {
    @media (prefers-reduced-motion: no-preference) {
      transition: transform 0.3s;
    }
  }

  .hds-dropdown-toggle-icon--is-open &,
  .hds-dropdown-toggle-button--is-open & {
    .hds-icon-chevron-down {
      transform: rotate(-180deg);
    }
  }
}

// LIST
// UL ELEMENT
// GOES INSIDE HDS::MenuPrimitive's :content block

.hds-dropdown__content {
  position: relative;
  display: flex;
  flex-direction: column;
  width: max-content; // notice: this is important because being in a position absolute means the layout algorithm assigns a width of 0 and this impacts on the flex algorithm of the children (in some cases they don't use the full width)
  min-width: 200px;
  max-width: 400px;
  background-color: var(--token-color-surface-primary);
  border-radius: var(--token-border-radius-medium);
  box-shadow: var(--token-surface-high-box-shadow);

  // the "popover" attributes comes with pre-defined styling so we need to override it
  :where(&[popover]) {
    width: fit-content;
    height: fit-content;
    margin: 0;
    padding: 0;
    overflow: visible;
    color: inherit;
    background: none;
    border: none;
    inset: 0;
  }
}

.hds-dropdown {
  .hds-dropdown__content {
    display: none;

    &[popover]:popover-open {
      display: flex;
    }
  }
}

.hds-dropdown__content--fixed-width {
  min-width: initial;
  max-width: initial;
}
/* ... */

